; ModuleID = '/home/carl/AnghaBench/freebsd/tools/regression/priv/extr_priv_sched_rtprio.c_priv_sched_rtprio_curproc_realtime.c'
source_filename = "/home/carl/AnghaBench/freebsd/tools/regression/priv/extr_priv_sched_rtprio.c_priv_sched_rtprio_curproc_realtime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.test = type { i32 }
%struct.rtprio = type { i64, i32 }

@RTP_PRIO_REALTIME = common dso_local global i32 0, align 4
@RTP_SET = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [51 x i8] c"priv_sched_rtprio_curproc_realtime(asroot, injail)\00", align 1
@EPERM = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [52 x i8] c"priv_sched_rtprio_curproc_realtime(asroot, !injail)\00", align 1
@.str.2 = private unnamed_addr constant [52 x i8] c"priv_sched_rtprio_curproc_realtime(!asroot, injail)\00", align 1
@.str.3 = private unnamed_addr constant [53 x i8] c"priv_sched_rtprio_curproc_realtime(!asroot, !injail)\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @priv_sched_rtprio_curproc_realtime(i32 %0, i32 %1, %struct.test* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.test*, align 8
  %7 = alloca %struct.rtprio, align 8
  %8 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store %struct.test* %2, %struct.test** %6, align 8
  %9 = load i32, i32* @RTP_PRIO_REALTIME, align 4
  %10 = getelementptr inbounds %struct.rtprio, %struct.rtprio* %7, i32 0, i32 1
  store i32 %9, i32* %10, align 8
  %11 = getelementptr inbounds %struct.rtprio, %struct.rtprio* %7, i32 0, i32 0
  store i64 0, i64* %11, align 8
  %12 = load i32, i32* @RTP_SET, align 4
  %13 = call i32 @rtprio(i32 %12, i32 0, %struct.rtprio* %7)
  store i32 %13, i32* %8, align 4
  %14 = load i32, i32* %4, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %23

16:                                               ; preds = %3
  %17 = load i32, i32* %5, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %23

19:                                               ; preds = %16
  %20 = load i32, i32* %8, align 4
  %21 = load i32, i32* @EPERM, align 4
  %22 = call i32 @expect(i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str, i64 0, i64 0), i32 %20, i32 -1, i32 %21)
  br label %23

23:                                               ; preds = %19, %16, %3
  %24 = load i32, i32* %4, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %32

26:                                               ; preds = %23
  %27 = load i32, i32* %5, align 4
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %32, label %29

29:                                               ; preds = %26
  %30 = load i32, i32* %8, align 4
  %31 = call i32 @expect(i8* getelementptr inbounds ([52 x i8], [52 x i8]* @.str.1, i64 0, i64 0), i32 %30, i32 0, i32 0)
  br label %32

32:                                               ; preds = %29, %26, %23
  %33 = load i32, i32* %4, align 4
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %42, label %35

35:                                               ; preds = %32
  %36 = load i32, i32* %5, align 4
  %37 = icmp ne i32 %36, 0
  br i1 %37, label %38, label %42

38:                                               ; preds = %35
  %39 = load i32, i32* %8, align 4
  %40 = load i32, i32* @EPERM, align 4
  %41 = call i32 @expect(i8* getelementptr inbounds ([52 x i8], [52 x i8]* @.str.2, i64 0, i64 0), i32 %39, i32 -1, i32 %40)
  br label %42

42:                                               ; preds = %38, %35, %32
  %43 = load i32, i32* %4, align 4
  %44 = icmp ne i32 %43, 0
  br i1 %44, label %52, label %45

45:                                               ; preds = %42
  %46 = load i32, i32* %5, align 4
  %47 = icmp ne i32 %46, 0
  br i1 %47, label %52, label %48

48:                                               ; preds = %45
  %49 = load i32, i32* %8, align 4
  %50 = load i32, i32* @EPERM, align 4
  %51 = call i32 @expect(i8* getelementptr inbounds ([53 x i8], [53 x i8]* @.str.3, i64 0, i64 0), i32 %49, i32 -1, i32 %50)
  br label %52

52:                                               ; preds = %48, %45, %42
  ret void
}

declare dso_local i32 @rtprio(i32, i32, %struct.rtprio*) #1

declare dso_local i32 @expect(i8*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
